--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>picocli</artifactId>
             <version>4.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.9.2</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
