--- a/componentA/pom.xml
+++ b/componentA/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>component-annotation</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>ooka-lzu</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
